--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,13 @@ subprojects {
                         name pomInfo.name
                         description pomInfo.description
                         url pomInfo.url
+                        licenses {
+                            license {
+                                name 'GNU Lesser General Public License (LGPL), Version 3'
+                                url 'https://www.gnu.org/licenses/lgpl-3.0.txt'
+                                distribution 'repo'
+                            }
+                        }
                     }
                 }
             }
